--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 _libgcc_mutex=0.1=main
 _openmp_mutex=5.1=1_gnu
 absl-py=2.1.0=pypi_0
+accelerate=0.29.3=pypi_0
 aiohttp=3.9.5=pypi_0
 aiosignal=1.3.1=pypi_0
 anyio=4.3.0=pypi_0
